<resources>
    <string name="app_name">Car shop</string>
    <string name="select_date_released">Select date released</string>
    <string name="e_g_4_6_8">e.g: 4 , 6, 8</string>
    <string name="e_g_28000">e.g: $ 28000</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="e_g_audi_bmw_chevrolet_ford">e.g: Audi, BMW, Chevrolet, Ford..</string>
    <string name="model">Model</string>
    <string name="car">Car</string>
    <string name="add">Add</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="e_g_1000_wats">e.g: 1000 Ah or 500 V</string>
    <string name="max_available_payload">Max available payload</string>
    <string name="e_g_200">e.g: 200 kg</string>
    <string name="e_g_100_tons">e.g: 100 tons</string>


    <string-array name="states">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="categories">
        <item>Electric</item>
        <item>Truck</item>
        <item>Commercial</item>
    </string-array>
</resources>