<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="args"
            type="com.alxd.carshop.ui.fragments.update.UpdateFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".ui.fragments.update.UpdateFragment">

        <TextView
            android:id="@+id/tvModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/model"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/etModel"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/e_g_audi_bmw_chevrolet_ford"
            android:text="@{args.currentCar.model}"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvModel"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="State"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etModel"/>

        <Spinner
            android:id="@+id/spinnerStates"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:entries="@array/states"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:parseStateToInt="@{args.currentCar.state}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvState" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerStates"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:entries="@array/categories"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:parseCategoryToInt="@{args.currentCar.category}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <LinearLayout
            android:id="@+id/llItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCategory">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:padding="8dp"
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:padding="8dp"
                    android:text="@string/number_of_seats"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="8dp"
                    android:layout_marginEnd="4dp"
                    android:ems="10"
                    android:hint="@string/e_g_28000"
                    android:inputType="numberDecimal"
                    android:setConvertDouble="@{args.currentCar.price}"
                    android:background="@drawable/custom_input"
                    android:layout_weight="1"
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/etSeats"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:hint="@string/e_g_4_6_8"
                    android:inputType="number"
                    android:setConvertIntToText="@{args.currentCar.numberOfSeats}"
                    android:background="@drawable/custom_input"
                    android:layout_weight="1"
                    android:autofillHints="" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDateReleased"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llItems">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/car" />

            <TextView
                android:id="@+id/tvDateReleased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:setFormatDateToText="@{args.currentCar.dateReleased}"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBatteryCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/battery_capacity"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDateReleased"/>

        <EditText
            android:id="@+id/etBatteryCapacity"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/e_g_1000_wats"
            android:background="@drawable/custom_input"
            android:visibility="invisible"
            android:text="@{args.currentCar.batteryCapacity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBatteryCapacity"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/tvMaxAvailablePayload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/max_available_payload"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDateReleased"/>

        <EditText
            android:id="@+id/etMaxAvailablePayload"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/e_g_200"
            android:background="@drawable/custom_input"
            android:visibility="invisible"
            android:text="@{args.currentCar.maxAvailablePayload}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBatteryCapacity"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/tvSpaceCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Space capacity"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDateReleased"/>

        <EditText
            android:id="@+id/etSpaceCapacity"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/e_g_100_tons"
            android:background="@drawable/custom_input"
            android:visibility="invisible"
            android:text="@{args.currentCar.spaceCapacity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBatteryCapacity"
            android:autofillHints=""/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>